# quads

./: .flake8  .gitignore  .gitreview  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: close-prs.yml  issuetracker.yml
conf/: idrac_interfaces.yml  logrotate_quads.conf  quads.yml  quadsweb.yml  selfservice.yml
container/server/: container-compose.yml
cron/: quads
docs/: quads-api.md  quads-host-metadata-search.md  quads-scale-limits.md  quads-schema-change.md  quads-self-schedule.md  quads-workflow.md  switch-host-setup.md
migrations/versions/: 071677379d4e_hostname_metadata.py  0f6d1a14c8f5_hosts_boot_mode.py  0f9009b00429_os_type_for_assignments.py  157838206445_added_boot_order_to_assignment.py  253ba446570d_self_scheduling.py  e9b96f886b77_processor_type_for_gpu.py
rpm/: quads.spec
src/quads/: config.py  quads_api.py
systemd/: quads-server.service  quads-web.service
templates/: README.md
templates/foreman/: custom-generic-network-post.rb
tests/: config.py  conftest.py  requirements.txt
tests/api/: test_assignment.py  test_auth.py  test_available.py  test_disks.py  test_hosts.py  test_interfaces.py  test_memory.py  test_moves.py  test_processors.py  test_schedules.py  test_terminate_assignment.py  test_vlans.py
tests/artifacts/: output.yaml
tests/cli/: config.py  conftest.py  test_broken.py  test_cloud.py  test_disk.py  test_host.py  test_interface.py  test_memory.py  test_metadata.py  test_notifications.py  test_notify.py  test_quads.py  test_regen.py  test_report.py  (+4 more)
(+108 files in other folders)
